# mcp_creator_growth

./: .dockerignore  .gitignore  .mcp.json.example  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  README_zh-CN.md  README_zh-TW.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  test_detection.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docker-publish.yml
scripts/: install.ps1  install.sh  update.ps1  update.sh
src/mcp_creator_growth/: __init__.py  __main__.py  config.py  debug.py  quiz_templates.py  server.py
src/mcp_creator_growth/reports/: 2025-01-22-mcp-trends.md  2025_trends.md  2026-01-25-daily-trends.md  daily_trends_2025_02_18.md  daily_trends_2026.md  daily_trends_20260124.md  daily_trends_2026_01_28.md  trends_2025_06.md
src/mcp_creator_growth/skills/: __init__.py  quiz.py
src/mcp_creator_growth/storage/: __init__.py  debug_index.py  global_index.py  path_resolver.py  project_meta.py  retrieval.py  serializers.py  session_storage.py  storage_manager.py  terms_data.py  terms_index.py  test_toon.py  toon_serializer.py
src/mcp_creator_growth/utils/: __init__.py  quiz_generator.py
src/mcp_creator_growth/web/: __init__.py  main.py
src/mcp_creator_growth/web/constants/: __init__.py
src/mcp_creator_growth/web/models/: __init__.py  learning_session.py
src/mcp_creator_growth/web/routes/: __init__.py  learning_routes.py
tests/: test_debug_index.py  test_quiz.py  test_toon.py  test_toon_serializer.py
(+14 files in other folders)
