[project]
name = "mcp-creator-growth"
version = "1.1.0"
description = "MCP Creator Growth - Context-aware learning sidebar for AI coding assistants"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "SunflowersLwtech" }
]
keywords = ["mcp", "ai", "learning", "web-ui", "interactive", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=13.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-creator-growth = "mcp_creator_growth.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_creator_growth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]
